<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_width="405dp"
            android:layout_height="200sp"
            android:background="@color/white"
            android:gravity="bottom|end"
            android:hint="@string/hint"
            android:inputType="numberDecimal"
            android:textSize="50sp"
            android:padding="10dp"
            tools:ignore="Autofill" />

        <!--row 1-->
        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/button_one"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/one"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/button_two"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/two"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/button_three"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/three"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/button_add"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/add"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/button_multiply"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/multiply"
                android:textSize="35sp"/>
        </LinearLayout>

        <!--row two-->
        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            tools:ignore="MissingPrefix"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row1">

            <Button
                android:id="@+id/button_four"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/four"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/button_five"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/five"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/button_six"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/six"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/button_subtract"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/subtract"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/button_divide"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/divide"
                android:textSize="35sp"/>

        </LinearLayout>

        <!--row 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_seven"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/seven"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/button_eight"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/eight"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/button_nine"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/nine"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/button_sqrt"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:text="@string/sqrt"
                android:textSize="34sp"/>

        </LinearLayout>

        <!--row four-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_zero"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/zero"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/button_dot"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/dot"
                android:textSize="35sp"
                style="@style/Widget.AppCompat.Button"/>

            <Button
                android:id="@+id/button_equal"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="240dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:text="@string/equal"
                android:textSize="30sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>